syntax = "proto3";

package contracts.services.gateway.operations;

import "contracts/services/operations/operation.proto";

message MakeCashWithdrawalOperationRequest {
  contracts.services.operations.OperationStatus status = 2;
  float amount = 3;
  string card_id = 4;
  string account_id = 7;
}

message MakeCashWithdrawalOperationResponse {
  contracts.services.operations.Operation operation = 1;
}